# serializer version: 1
# name: test_bool_raises[and]
  'The truth value of an Event is ambiguous. Combine events with "&" and "|" instead of "and" and "or", do not use "not", parenthesize each comparison, and write "(a < x) & (x < b)" or "x.isin([a, b])" instead of "a < x < b".'
# ---
# name: test_bool_raises[bool]
  'The truth value of an Event is ambiguous. Combine events with "&" and "|" instead of "and" and "or", do not use "not", parenthesize each comparison, and write "(a < x) & (x < b)" or "x.isin([a, b])" instead of "a < x < b".'
# ---
# name: test_bool_raises[chained_comparison]
  'The truth value of an Event is ambiguous. Combine events with "&" and "|" instead of "and" and "or", do not use "not", parenthesize each comparison, and write "(a < x) & (x < b)" or "x.isin([a, b])" instead of "a < x < b".'
# ---
# name: test_bool_raises[not]
  'The truth value of an Event is ambiguous. Combine events with "&" and "|" instead of "and" and "or", do not use "not", parenthesize each comparison, and write "(a < x) & (x < b)" or "x.isin([a, b])" instead of "a < x < b".'
# ---
# name: test_bool_raises[or]
  'The truth value of an Event is ambiguous. Combine events with "&" and "|" instead of "and" and "or", do not use "not", parenthesize each comparison, and write "(a < x) & (x < b)" or "x.isin([a, b])" instead of "a < x < b".'
# ---
# name: test_evaluate_empty_event_raises
  'The event has no intersections of elementary events.'
# ---
